# iocum

./: .gitignore  Cargo.toml  README.md  openapitools.json
asm/: Cargo.toml
asm/examples/: cfo.rs
asm/src/: assembly.rs  entry.rs  location.rs  main.rs  raw.rs
bgs/: Cargo.toml  build.rs
bgs/examples/: blizzard_certificate_bundle.pub  patch.rs
bgs/src/: HostedLogin.proto  WhisperVoiceState.proto  application_service.proto  application_service_types.proto  bgs.rs  blizzard_certificate_bundle.pvk  browser_service.proto  browser_service_types.proto  chat_service.proto  com.blizzard.telemetry.proto  common_types.proto  cross_browser_service.proto  cross_browser_service_types.proto  friends_service.proto  friends_service_types.proto  games_service.proto  games_service_types.proto  ipc_command.proto  login_service.proto  main.rs  main_window_service.proto  main_window_service_types.proto  notification_service.proto  notification_service_types.proto  playscreen_service.proto  playscreen_service_types.proto  potential_friends_service.proto  potential_friends_service_types.proto  profile_service.proto  profile_service_types.proto  protocol.proto  region_selector_service.proto  router_service.proto  rpc_core.proto  shop_service.proto  social_service.proto  social_service_types.proto  telemetry_agent_restart_limit_error.proto  telemetry_agent_timeout_error.proto  telemetry_agent_update.proto  (+39 more)
bgs/src/Client/Store/: OnAPIGatewayRequest.proto  OnAPIGatewayResponse.proto
bgs/src/bgs/low/pb/client/: account_service.proto  account_types.proto  attribute_types.proto  authentication_service.proto  challenge_service.proto  channel_invitation_types.proto  channel_role_set.proto  channel_service.proto  channel_types.proto  channel_voice_service.proto  club_ban.proto  club_core.proto  club_enum.proto  club_invitation.proto  club_member.proto  club_member_id.proto  club_membership_listener.proto  club_membership_service.proto  club_membership_types.proto  club_notification.proto  club_range_set.proto  club_request.proto  club_role.proto  club_stream.proto  club_type.proto  club_types.proto  connection_service.proto  content_handle_types.proto  diag_service.proto  embed_types.proto  entity_types.proto  ets_types.proto  event_view_types.proto  friends_service.proto  friends_types.proto  invitation_types.proto  message_types.proto  notification_types.proto  presence_listener.proto  presence_service.proto  (+18 more)
bgs/src/bgs/low/pb/client/api/client/v1/: channel_id.proto
bgs/src/bgs/low/pb/client/api/client/v2/: attribute_types.proto  channel_enum.proto  channel_membership_service.proto  channel_service.proto  channel_types.proto  game_utilities_service.proto  report_service.proto  report_types.proto  voice_service.proto
bgs/src/bgs/low/pb/client/global_extensions/: field_options.proto  message_options.proto  method_options.proto  range.proto  routing.proto  service_options.proto
bgs/src/game/BNetCommon/Protobuf/: Authentication.proto  Presence.proto
bgs/src/game/Core/Utilities/Protobuf/: CustomGame.proto
http/: Cargo.toml
http/examples/: mitm.rs
http/src/: main.rs
mcbe/: Cargo.toml
mcbe/examples/: convert_pack.rs  import.rs
mcbe/src/: lib.rs
mcbe/src/behavior_pack/: block.rs
mcbe/src/pack/: mod.rs
mcbe/src/resource_pack/: blocks.rs  flipbook_textures.rs  geometry.rs  mod.rs  texture_atlas.rs
mcje/: Cargo.toml
mcje/examples/: mitm.rs
mcje/src/: lib.rs
mcje/src/packet/c2s/: game.rs
mcje/src/packet/s2c/: game.rs  login.rs
mcje/src/resource_pack/: block.rs  block_state.rs  block_states.rs  mcmeta.rs  mod.rs  model.rs
mcje/src/types/: mod.rs
mcje_derive/: Cargo.toml
mojang_session_api/: Cargo.toml
mojang_session_api/src/apis/: configuration.rs  default_api.rs
mojang_session_api/src/models/: error.rs  join_server_request.rs  user.rs  user_property.rs
nbt/: Cargo.toml
nbt/src/: de.rs  ser.rs
nfs/: Cargo.toml
nfs/src/: main.rs
ngdp/: Cargo.toml
ngdp/examples/: pro.rs  test.rs
ngdp/src/: blte.rs  casc.rs  lib.rs  tact.rs
ngdp/src/tact/: encoding.rs  mod.rs
pro/: Cargo.toml
pro/src/: lib.rs  map.rs  tact_manifest.rs
proutil/: Cargo.toml
proutil/src/: main.rs
stu/: Cargo.toml
stu/src/: de.rs  error.rs  lib.rs  ser.rs
tls/: Cargo.toml
tls/src/: lib.rs
