[workspace]
members = [
    #"bgs",
    "http",
    "mcbe",
    "mcje",
    "mcje_derive",
    "mojang_session_api",
    "nbt",
    "nfs",
    #"ngdp",
    #"pro",
    "proutil",
    #"stu",
    "tls",
]
resolver = "2"

[patch.crates-io]
serde_json = { git = "https://github.com/valaphee/serde_json.git" }
