[package]
name = "amalgam"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/valaphee/stax.git"

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
eframe = { version = "0.21.3", default-features = false, features = ["default_fonts", "wgpu"] }
egui_dock = "0.5.0"
egui_extras = "0.21.0"
iced-x86 = "1.18.0"
object = { version = "0.31.1", features = ["all"] }
once_cell = "1.17.1"
rfd = "0.11.3"
