[package]
name = "staxbgs"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/valaphee/stax.git"

[dev-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
kmp = "0.1.1"
openssl = "0.10.50"
rand = "0.8.5"
rsa = { version = "0.8.2", features = ["sha2"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"

[[example]]
name = "bgs_patch"
path = "examples/patch.rs"
