[package]
name = "iocum_bgs"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/iocum.git"

[dependencies]
async-trait = "0.1.68"
byteorder = "1.4.3"
clap = { version = "4.3.3", features = ["derive"] }
futures-util = "0.3.28"
hex = { version = "0.4.3", features = ["serde"] }
kmp = "0.1.1"
native-tls = "0.2.11"
openssl = "0.10.54"
prost = "0.11.9"
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["sha2"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = { version = "1.28.2", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.4.0"

iocum_tls = { path = "../tls" }

[build-dependencies]
glob = "0.3.1"
hashers = "1.0.1"
prost = "0.11.9"
prost-build = "0.11.9"
