[package]
name = "staxhttp"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/valaphee/stax.git"

[dependencies]
brotli = "3.3.4"
clap = { version = "4.2.2", features = ["derive"] }
flate2 = "1.0.25"
futures-util = "0.3.28"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-rustls = "0.24.0"
webpki-roots = "0.23.0"

staxtls = { path = "../tls" }
