[package]
name = "iokum_mcbe"
version = "1.20.1-0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/iokum.git"
description = "Implementation for Minecraft: Bedrock Edition's protocol"

[dependencies]
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
serde_with = "3.0.0"

[dev-dependencies]
iokum_mcje = { path = "../mcje" }
