[package]
name = "iokum_mcje"
version = "1.19.4-0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/iokum.git"
description = "Implementation for Minecraft: Java Edition's protocol"

[dependencies]
aes = "0.8.2"
byteorder = "1.4.3"
bytes = "1.4.0"
cfb8 = "0.8.1"
derivative = "2.2.0"
flate2 = "1.0.26"
glam = "0.24.0"
indexmap = "1.9.3"
num_enum = "0.6.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde-value = "0.7.0"
thiserror = "1.0.40"
tokio-util = { version = "0.7.8", features = ["codec"] }
uuid = { version = "1.3.3", features = ["v4"] }

mojang_session_api = { path = "../mojang_session_api" }
iokum_nbt = { path = "../nbt" }
iokum_mcje_derive = { path = "../mcje_derive" }

[dev-dependencies]
clap = { version = "4.3.3", features = ["derive"] }
futures = "0.3.28"
hex = "0.4.3"
rand = "0.8.5"
rsa = "0.9.2"
sha1 = "0.10.5"
tokio = { version = "1.28.2", features = ["full"] }

[[example]]
name = "mcje_mitm"
path = "examples/mitm.rs"
