[package]
name = "staxmcje_derive"
version = "1.19.4-0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/stax.git"
description = "Derive macros used by staxmcje"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"
