[package]
name = "iokum_mcje_derive"
version = "1.19.4-0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/iokum.git"
description = "Derive macros used by iokum_mcje"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = "2.0.18"
