[package]
name = "staxnbt"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/stax.git"
description = "Implementation for Minecraft's named binary tag file format using serde"

[dependencies]
byteorder = "1.4.3"
num_enum = "0.6.1"
serde = "1.0.160"
thiserror = "1.0.40"
