[package]
name = "iokum_ngdp"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/iokum.git"

[dependencies]
byteorder = "1.4.3"
fasthash = "0.4.0"
flate2 = "1.0.26"
hex = { version = "0.4.3", features = ["serde"] }
md-5 = "0.10.5"
salsa20 = "0.10.2"
thiserror = "1.0.40"
