[package]
name = "iokum_pro"
version = "0.0.0"
edition = "2021"
authors = ["Valaphee <iam@valaphee.com>"]
license = "Apache-2.0"
repository = "https://github.com/valaphee/iokum.git"

[dependencies]
aes = "0.8.3"
bitflags = "2.3.3"
bytemuck = { version = "1.13.1", features = ["derive"] }
byteorder = "1.4.3"
cbc = { version = "0.1.2", features = ["alloc"] }
serde = { version = "1.0.167", features = ["derive"] }
sha1 = "0.10.5"
